tests/conformance/errors/recursion_stack_depth/input.dgm
fn recur(n) {
  if (n == 0) {
    undefined_var
  }
  return recur(n - 1)
}

recur(3)
